--- a/css/style.css
+++ b/css/style.css
@@ -39,28 +39,6 @@
   }
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: fixed;
-  }
-  .topnav.responsive a.icon {
-    position: fixed;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-@media only screen and (max-device-width: 600px) {
-  .parallax {
-    background-attachment: scroll;
-  }
-}
-
 .bars-container {
   display: inline-block;
 }
@@ -98,20 +76,78 @@
   background-size: cover;
 }
 
-body, html {
-height: 100%;
+body,
+html {
+  height: 100%;
 }
 
-.title{
-  font-family: 'Noticia Text', serif;
-  margin-top: 80px;
-  display:block;
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: fixed;
+  }
+  .topnav.responsive a.icon {
+    position: fixed;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+
+.title {
+  font-family: "Noticia Text", serif;
+  margin-top: 100px;
   text-align: center;
-  font-size: 70px;
+  font-size: 60px;
 }
 
-.subtitle{
-  font-family: 'Patrick Hand', cursive;
+.subtitle {
+  font-family: "Patrick Hand", cursive;
   font-size: 30px;
   text-align: center;
+  margin-bottom: 100px;
+  display: block;
+}
+
+.about-text {
+  font-family: "Patrick Hand", cursive;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 200px;
+}
+
+.about-pic {
+  float: left;
+  display: inline-block;
+  border-radius: 45%;
+  margin-right: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 50px;
+  }
+  .subtitle {
+    font-size: 25px;
+  }
+  .about-text {
+    font-size: 18px;
+  }
+  .about-pic {
+    width: 150px;
+    height: auto;
+  }
+}
+
+.pic-and-text {
+  clear: both;
 }
