--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@
 .parallax {
   background-image: url("https://images.unsplash.com/photo-1518600654093-2a24cddafa38?ixlib=rb-0.3.5&s=d89da5b98e50f66dd07e935336655199&auto=format&fit=crop&w=2017&q=80");
   height: 100%;
+  width: auto;
+  display: block;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -101,6 +103,10 @@ html {
   .parallax {
     background-attachment: scroll;
   }
+  body{
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 .title {
@@ -127,7 +133,6 @@ html {
 
 .about-pic {
   float: left;
-  display: inline-block;
   border-radius: 45%;
   margin-right: 20px;
 }
