--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 a { cursor: pointer; }
 
 .topnav {
+  z-index: 9001;
+  font-family: "Noticia Text", serif;
   background-color: #b0bec5;
   opacity: 0.9;
   position: fixed;
@@ -76,25 +78,39 @@ html {
   padding: 0;
 }
 
+.top-text-title {
+  text-align: left !important;
+  font-size: 100px !important;
+}
+
 .title {
   font-family: "Noticia Text", serif;
-  padding: 200px;
+  padding-top: 200px;
+  padding-bottom: 100px;
   text-align: center;
-  font-size: 60px;
+  font-size: 80px;
 }
 
 .subtitle {
-  font-family: "Patrick Hand", cursive;
-  font-size: 30px;
-  text-align: center;
-  margin-bottom: 100px;
+  font-family: "Noticia Text", serif;
+  font-size: 60px;
+  text-align: left;
   display: block;
+  float: left;
+}
+
+.sub-subtitle {
+  font-family: "Noticia Text", serif;
+  font-size: 12px;
+  clear: both;
+  display: block;
+  margin-bottom: 100px;
 }
 
 .project-title {
   font-family: "Noticia Text", serif;
   font-size: 30px;
-  margin-top: 100px;
+  margin-top: 150px;
   padding: 20px;
   text-align: center;
   display: block;
@@ -108,19 +124,20 @@ html {
   display: block;
 }
 
+.project-image {
+  display: block;
+  max-width: 900px;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
 .about-text {
   font-family: "Patrick Hand", cursive;
-  font-size: 25px;
+  font-size: 30px;
   text-align: center;
-  margin-bottom: 200px;
+  margin-bottom: 250px;
+  display: block;
 }
-
-.about-pic {
-  float: left;
-  border-radius: 45%;
-  margin-right: 20px;
-}
-
 
 a img {
   display: inline-block;
@@ -130,11 +147,15 @@ a img {
   height: 100%;
 }
 
+a img:hover {
+  opacity: 0.8;
+}
+
 .pic-and-text {
   clear: both;
   display: block;
   background-color:#c9d9e0;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
 }
 
 .projects-section-spacing{
@@ -142,11 +163,16 @@ a img {
 }
 
 .dev-icons{
-  padding: 1px;
+  padding: 10px;
+  font-size:50px;
 }
 
-i {
-  font-size:50px;
+.pomodoro-link {
+  color: #212529;
+}
+
+.pomodoro-link:hover {
+  color: black;
 }
 
 .contact-text {
@@ -168,7 +194,7 @@ a i {
 .fa {
   font-size: 80px;
   padding: 10px;
-  color: #323539;
+  color: #212529;
 }
 
 .fa:hover {
@@ -235,15 +261,25 @@ a i {
     padding: 100px;
     font-size: 50px;
   }
+  .top-text-title {
+    float: none;
+    text-align: center !important;
+    font-size: 100px !important;
+  }
   .subtitle {
+    float: none;
+    text-align: center;
+    font-size: 50px;
+  }
+.sub-subtitle {
+  text-align: center;
+}
+  .about-text {
     font-size: 25px;
   }
-  .about-text {
-    font-size: 18px;
-  }
-  .about-pic {
-    width: 150px;
-    height: auto;
+  .dev-icons{
+    padding: 5px;
+    font-size: 35px;
   }
   .fa {
     font-size: 45px;
