--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,9 @@ a i {
 
 .footer-style {
   display: block;
+  position: absolute;
   background-color: #b0bec5;
+  width: 100%;
   padding: 20px;
 }
 
@@ -248,6 +250,9 @@ a i {
 
 @media only screen and (max-width: 700px) {
   .parallax {
+    background-attachment: scroll;
+  }
+  .parallax-contacts {
     background-attachment: scroll;
   }
   body{
